test/bad/classes/inheritance03.px

class Base def
    x: Int

class Sub: Base def
    y: Int

sub = Sub()
sub = Base()
